<resources>
    <string name="app_name">POJO Wallpapers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feature">Feature</string>
    <string name="popular">Popular</string>

    <!--Tabs Images-->
    <string name="home_top">Top</string>
    <string name="home_more">Categories</string>
    <string name="home_wallpaper">Wallpaper</string>

    <!--Drawer Menu-->
    <string name="remove_ads">Remove Ads</string>
    <string name="home">Home</string>
    <string name="pc_wallpapers">PC Wallpapers</string>
    <string name="_4k_wallpapers">4K Wallpapers</string>
    <string name="editor_s_choices">Editor\'s Choices</string>
    <string name="video_wallpapers">Video Wallpapers</string>
    <string name="panorama_wallpapers">Panorama Wallpapers</string>
    <string name="islamic_wallpapers">Islamic Wallpapers</string>
    <string name="categories">Categories</string>
    <string name="saved">Saved</string>
    <string name="share">Theme</string>
    <string name="help_amp_feedback"><![CDATA[Help & feedback]]></string>
    <string name="about">About</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="feedback">Feedback</string>
    <string name="privacy">privacy policy</string>
    <string name="help">Help</string>
    <string name="faq">FAQ</string>
    <string name="instagram">Instagram</string>
    <string name="app_version">App version</string>

    <!--Other's-->
    <string name="background">choose the app</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <string name="todo">TODO</string>
</resources>