<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragment.SettingFragment.HelpFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:popupTheme="@color/black_alpha_0"
        android:elevation="2dp"
        android:layout_marginTop="-56dp"
        app:theme="@style/ToolbarColor" />

    <RelativeLayout
        android:id="@+id/faq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/faq_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:paddingTop="@dimen/_14sdp"
            android:paddingBottom="@dimen/_9sdp"
            android:textSize="@dimen/_13ssp"
            android:text="@string/faq"
            android:fontFamily="@font/robotmed"
            android:textColor="#DD000000" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:paddingTop="@dimen/_9sdp"
            android:paddingBottom="@dimen/_9sdp"
            android:textSize="@dimen/_13ssp"
            android:text="@string/help"
            android:fontFamily="@font/robotmed"
            android:textColor="#DD000000" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/privacy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:paddingTop="@dimen/_9sdp"
            android:paddingBottom="@dimen/_9sdp"
            android:textSize="@dimen/_13ssp"
            android:text="@string/privacy"
            android:fontFamily="@font/robotmed"
            android:textColor="#DD000000" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/feedback_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:paddingTop="@dimen/_9sdp"
            android:paddingBottom="@dimen/_9sdp"
            android:textSize="@dimen/_13ssp"
            android:text="@string/feedback"
            android:textColor="#DD000000"
            android:fontFamily="@font/robotmed"
/>
    </RelativeLayout>
</LinearLayout>